--- a/estilo.css
+++ b/estilo.css
@@ -3,11 +3,11 @@
 
 
 :root{
-    --azul-dnc: #0c70f2;
+    --azul-dnc: #0C70F2;
     --preto-dnc: #303030;
     --cinza-hover: #C9C9C9;
     
-    --fonte-padrao:'Inter';
+    --fonte-padrao: 'Inter';
 }   
 
 
@@ -55,13 +55,13 @@
 
     #principal button{
         margin-right:5%;
-        background-color:var(--azul-dnc);
+        background-color: var(--azul-dnc);
         border: 0px;
 
         height: 40px;
         width: 80px;
 
-        font-family:var(--font-padrao);
+        font-family: var(--font-padrao);
         font-size: 20px;
         font-weight: 600;
         color: white;
@@ -70,7 +70,7 @@
         cursor: pointer;
     }
 
-/* Seção principal do site */
+/* Secção principal do site */
 
 section{
     display:flex;
@@ -97,7 +97,7 @@ section{
     header h2{
         text-align: center;
         font-size: 40px;
-        font-weight:700;
+        font-weight: 700;
         
         margin-bottom: 100px;
     }
@@ -167,4 +167,149 @@ section{
         cursor: pointer;
     
     }
+    /* Footer */ 
+
+    footer{
+        width: 100%;
+        background-color: var(--azul-dnc);   
+    }
+
+    footer .linha1{
+        display: flex; 
+        justify-content: space-around; /* Define os espaços de sobra entre os componentes */
+        align-items: center; 
+    }
+
+    footer ul{
+        list-style: none; /* Usado para tirar os pontos da frente do texto */
+        margin: 0px;
+        padding: 0px;
+ 
+    }
+ 
+    footer nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        height: 330px;
+    }
+
+    footer h5{
+        text-align: center; 
+        color: white;
+        font-weight: 800;
+        font-size: 18px;
+        font-family: var(--font-padrao);
+        background-color: var(--preto-dnc);
+        border-radius: 10px;
+
+        padding: 10px 10px 10px 10px;
+        margin-bottom: 15px;
+    }
+
+    footer ul li{
+        text-align: center;
+        color: white;
+        font-weight: 600;
+        font-size: 18px;
+        font-family: var(--font-padrao);
+
+        margin: 20px 0px 20px 0px;
+    }
+
+    footer ul li a{
+        color: white;
+        text-decoration: none;
+    }
+
+    footer ul li a:hover{
+        color: var(--cinza-hover);
+    }
+
+    footer .endereço{
+        font-weight: 600;
+        font-size: 18px;
+        font-family: var(--font-padrao);
+        color: white;
+        text-align: center;
+        width: 20%;
+    }
+
+    footer .linha2{
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        margin: 0px;
+        padding: 10px;
+    }
+
+    footer .linha2 a{   
+        font-family: var(--font-padrao);
+        font-size: 18px;
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        padding: 5px;
+    }
+
+    footer .linha2 a:first-child{ /* Somente a borda a direita, do primeiro filho tem o item | */
+        border-right: 3px solid white;
+    }
+
+    footer .linha2 a:hover{
+        color: var(--cinza-hover);
+    }
+
+@media only screen and (max-width: 600px;){
+
+    /* Menu */
+    #principal{
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu{
+        flex-direction: column;
+        width: 100%;
+        padding: 0px;
+
+    }
+
+    #menu a{
+        display: flex;
+        align-items: center;
+        height: 50px;
+        
+    }
     
+    #principal button{
+        width: 100%;
+        margin: 0px;
+    }
+
+    /* Section */
+
+    section h1{
+        font-size: 38px;
+    }
+
+    section h2 {
+        font-size: 28px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    form{
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label{
+        font-size: 17px;
+    }
+
+    
+}
+
+
