--- a/estilo.css
+++ b/estilo.css
@@ -309,7 +309,17 @@ section{
         font-size: 17px;
     }
 
-    
+    /* Footer */
+
+    footer .linha1{
+        flex-direction: column;
+    }
+
+    footer .endereço{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+
 }
 
 
